Reflect all changes to date.

--- a/library.properties
+++ b/library.properties
@@ -8,6 +8,6 @@ category=Data Processing
 url=https://www.tensorflow.org/lite/microcontrollers/overview
 ldflags=
 includes=TensorFlowLite.h
-precompiled=full
+precompiled=false
 dot_a_linkage=false
 depends=ArduinoBLE,Arduino_LSM9DS1
